Update Beat Runner media

--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
             <div class="projects-grid">
                 <!-- Beat Runner -->
                 <div class="project-card">
-                    <div class="project-image">
-                        <img src="images/beatrunner-hero.png" alt="Beat Runner gameplay">
+                    <div class="project-image tall-media">
+                        <video autoplay muted loop playsinline>
+                            <source src="images/beats runner/gif-trim.MP4" type="video/mp4">
+                        </video>
                         <div class="project-badge">Playable Now</div>
                     </div>
                     <div class="project-content">
@@ -134,7 +136,7 @@
                 </div>
 
                 <!-- Lucky Tower -->
-                <div class="project-card featured">
+                <div class="project-card">
                     <div class="project-image">
                         <img src="images/lucky-tower/hero-gameplay.png"
                             alt="Lucky Tower gameplay showing high-stakes decision moment">
@@ -268,8 +270,8 @@
         <div class="container">
             <h2 class="section-title">Let's Work Together</h2>
             <p class="contact-subtitle">
-                I am looking for a Game Design, Monetization, or Product role where I can drive KPIs through systematic
-                design and execution.
+                I'm looking for a Game Designer or Product role in mobile F2P, focused on systems, LiveOps, and feature
+                development with a fast iteration cycle.
             </p>
             <div class="contact-links">
                 <a href="mailto:aloniter99@gmail.com" class="contact-link">
