--- a/beat-runner.html
+++ b/beat-runner.html
@@ -177,6 +177,9 @@
     <div class="content-section">
         <h2 class="content-title">Screens</h2>
         <div class="screens-gallery">
+            <video autoplay muted loop playsinline aria-label="Beat Runner gameplay demo" class="screens-video tall-media">
+                <source src="images/beats runner/gif-trim.MP4" type="video/mp4">
+            </video>
             <img src="images/beats runner/main screen.png" alt="Beat Runner Main Screen">
             <img src="images/beats runner/in game photo.png" alt="Gameplay Action">
             <img src="images/beats runner/stage mode manu.png" alt="Stage Select Menu">
