Update about and hero copy, add CV

--- a/about.html
+++ b/about.html
@@ -28,10 +28,10 @@
     <!-- About Hero -->
     <section class="about-hero">
         <div class="container">
-            <h1 class="about-title">Hi, I’m Alon Iter - Product-Driven Game Designer & Technical Operator.</h1>
+            <h1 class="about-title">Hi, I'm Alon Iter. I design and operate mobile F2P systems with fast iteration.</h1>
             <p class="about-subtitle">
-                Product-Driven Game Designer combining creative systems thinking with business logic. I partner with
-                PMs, Analysts, and Engineers to ship sustainable economies that engage players and drive growth.
+                I work on large-scale LiveOps for Dice Dreams, and I build prototypes and internal tools to validate
+                loops early, reduce manual work, and help teams move faster.
             </p>
         </div>
     </section>
@@ -47,131 +47,91 @@
                     <div class="story-content">
                         <h2 class="section-heading">Highlights</h2>
                         <ul class="about-list">
-                            <li>LiveOps execution for a large casual F2P title</li>
-                            <li>Feature and economy thinking, not just configuration</li>
-                            <li>Rapid playable prototypes to validate loops early</li>
-                            <li>Comfortable with analytics, experiments, and clear specs</li>
-                            <li>Strong collaboration with product, ops, and engineering</li>
+                            <li>LiveOps execution for a large casual F2P title, including event setup, promo
+                                configuration, feature rollouts, and economy experiments</li>
+                            <li>Data-informed iteration using segmentation, A/B test support, KPI monitoring, and basic
+                                SQL</li>
+                            <li>Specs and operational documentation that help Product and R&amp;D ship safely and
+                                repeatably</li>
+                            <li>Automation mindset focused on removing repetitive processes and improving iteration
+                                speed</li>
                         </ul>
                     </div>
                 </div>
+            </div>
+
+            <div class="content-section">
                 <h2 class="section-heading">How I work</h2>
                 <ul class="about-list">
-                    <li><strong>Hypothesis:</strong> Start with player behavior data and business goals.</li>
-                    <li><strong>Model:</strong> Forecast economy impact and sinks/sources in Excel.</li>
-                    <li><strong>Prototype:</strong> Build playable proofs-of-concept to validate "game feel".</li>
-                    <li><strong>Spec:</strong> Deliver engineering-ready documentation for production.</li>
+                    <li>Start with a player behavior hypothesis and a clear goal</li>
+                    <li>Model the economy quickly in spreadsheets to spot risks early</li>
+                    <li>Prototype to validate "game feel" and the decision loop</li>
+                    <li>Write implementation-ready specs, rollout steps, and edge cases so execution is smooth</li>
                 </ul>
             </div>
 
-            <!-- What I do best -->
             <div class="content-section">
-                <h2 class="section-heading">Core Competencies</h2>
-
-                <div class="strengths-grid">
-                    <div class="strength-card">
-                        <div class="strength-icon">⚡</div>
-                        <h3 class="strength-title">LiveOps Strategy</h3>
-                        <p class="strength-text">
-                            Designing calendars, events, and sales that drive D1-D30 retention and prevent churn.
-                        </p>
-                    </div>
-
-                    <div class="strength-card">
-                        <div class="strength-icon">🎮</div>
-                        <h3 class="strength-title">Game Economy</h3>
-                        <p class="strength-text">
-                            Balancing sinks & sources, inflation management, and pricing virtual goods for max LTV.
-                        </p>
-                    </div>
-
-                    <div class="strength-card">
-                        <div class="strength-icon">📊</div>
-                        <h3 class="strength-title">Data Analysis</h3>
-                        <p class="strength-text">
-                            Writing SQL queries, building dashboards, and interpreting A/B test results to iterate.
-                        </p>
-                    </div>
-
-                    <div class="strength-card">
-                        <div class="strength-icon">🤝</div>
-                        <h3 class="strength-title">Product Leadership</h3>
-                        <p class="strength-text">
-                            Owning the roadmap, prioritizing backlog based on ROI, and aligning cross-functional teams.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Skills -->
-            <div class="content-section">
-                <h2 class="section-heading">Technical Stack</h2>
-
+                <h2 class="section-heading">What I bring</h2>
                 <div class="skills-category">
-                    <h3 class="skills-category-title">Product & Design</h3>
-                    <div class="skills-list">
-                        <span class="skill-tag">Economy Modeling (Excel)</span>
-                        <span class="skill-tag">Feature Specs</span>
-                        <span class="skill-tag">Wireframing</span>
-                        <span class="skill-tag">Game Logic Design</span>
-                        <span class="skill-tag">LiveOps Calendars</span>
-                    </div>
+                    <h3 class="skills-category-title">LiveOps &amp; Systems</h3>
+                    <ul class="about-list">
+                        <li>Event configuration, promotions, experiments, and delivery discipline</li>
+                    </ul>
                 </div>
 
                 <div class="skills-category">
-                    <h3 class="skills-category-title">Data & Tech</h3>
-                    <div class="skills-list">
-                        <span class="skill-tag">SQL</span>
-                        <span class="skill-tag">Tableau / Looker</span>
-                        <span class="skill-tag">Jira / Confluence</span>
-                        <span class="skill-tag">Git / Version Control</span>
-                        <span class="skill-tag">Rapid Prototyping (JS/Unity)</span>
-                    </div>
+                    <h3 class="skills-category-title">Data &amp; Decision Making</h3>
+                    <ul class="about-list">
+                        <li>KPI tracking, segmentation support, A/B test setups, RCA thinking</li>
+                    </ul>
+                </div>
+
+                <div class="skills-category">
+                    <h3 class="skills-category-title">Execution &amp; Collaboration</h3>
+                    <ul class="about-list">
+                        <li>Close work with Product, Monetization, Game Ops, and R&amp;D</li>
+                    </ul>
                 </div>
             </div>
 
-            <!-- What I'm Looking For -->
+            <div class="content-section">
+                <h2 class="section-heading">Technical toolkit</h2>
+                <ul class="about-list">
+                    <li><strong>Spreadsheets:</strong> modeling, balancing, planning</li>
+                    <li><strong>Data:</strong> basic SQL, dashboards, KPI monitoring</li>
+                    <li><strong>Dev:</strong> Python, HTML/CSS/JS, Unity basics, Git</li>
+                    <li><strong>AI:</strong> workflows to accelerate tooling and reduce manual work</li>
+                </ul>
+            </div>
+
             <div class="content-section">
                 <h2 class="section-heading">What I'm looking for</h2>
                 <p class="about-text">
-                    I'm looking for a Game Designer or Product role in mobile F2P, focused on systems, LiveOps, and
-                    feature development with a fast iteration cycle.
+                    A Game Designer role in mobile F2P focused on systems, LiveOps, and feature development, where fast
+                    iteration and measurable improvements matter.
+                </p>
+                <p class="about-text">
+                    <a href="Alon%20Iter%20-%20CV.pdf" class="link-primary" download>Download CV (PDF)</a>
                 </p>
             </div>
 
-            <!-- Experience -->
             <div class="content-section">
                 <h2 class="section-heading">Experience</h2>
                 <div class="background-item">
                     <div class="background-header">
-                        <h3 class="background-title">SuperPlay, Dice Dreams</h3>
-                        <span class="background-period">Oct 2024 – Present</span>
+                        <h3 class="background-title">Technical Operations Manager - SuperPlay (Dice Dreams)</h3>
                     </div>
-                    <p class="background-role">Technical Operations Manager</p>
-                </div>
-            </div>
-
-            <!-- Education -->
-            <div class="content-section">
-                <h2 class="section-heading">Education</h2>
-                <div class="background-item">
-                    <div class="background-header">
-                        <h3 class="background-title">The Academic College of Tel Aviv-Yaffo</h3>
-                        <span class="background-period">2024</span>
-                    </div>
-                    <p class="background-role">B.Sc. Information Systems (Cybersecurity specialization)</p>
-                </div>
-            </div>
-
-            <!-- CTA -->
-            <div class="about-cta">
-                <p class="cta-text">
-                    If you're building a live mobile game and need someone who combines LiveOps execution with systems
-                    thinking and prototyping, let's talk.
-                </p>
-                <div class="cta-buttons">
-                    <a href="mailto:aloniter99@gmail.com" class="btn btn-primary">Get in Touch</a>
-                    <a href="index.html" class="btn btn-secondary">View Projects</a>
+                    <ul class="about-list">
+                        <li>Run and support LiveOps events and promotions end-to-end (setup, validation, release
+                            coordination)</li>
+                        <li>Partner with Product and R&amp;D to execute feature rollouts safely, including edge-case
+                            coverage and QA notes</li>
+                        <li>Support segmentation and A/B tests by aligning configuration, tracking key KPIs, and
+                            documenting learnings</li>
+                        <li>Build scripts and lightweight tools that reduce manual work and improve reliability of
+                            recurring processes</li>
+                        <li>Maintain clear operational documentation so workflows are repeatable across the team</li>
+                    </ul>
                 </div>
             </div>
         </div>
