--- a/index.html
+++ b/index.html
@@ -28,25 +28,31 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <p class="hero-subtitle">Game Systems Designer + LiveOps Operator</p>
+                <p class="hero-subtitle">Technical Operations Manager | Systems and LiveOps (Mobile F2P)</p>
                 <h1 class="hero-title">
-                    I design, run, and optimize<br>
-                    <span class="accent">F2P Economies</span> and LiveOps Events
+                    I design and execute<br>
+                    <span class="accent">Mobile F2P Systems</span><br>
+                    and LiveOps
                 </h1>
                 <p class="hero-description">
-                    Technical Ops Manager in mobile F2P. I ship live content end to end: offers and configs,
-                    segmentation,
-                    QA, KPI monitoring, and fast iteration based on player data.
+                    I run LiveOps and feature execution for a large-scale casual F2P game.<br>
+                    I handle configuration, event setup, offers, QA checks, KPI monitoring, and iteration loops with
+                    Product, Monetization, Game Ops, and R&amp;D.<br>
+                    I also build small prototypes and tools to validate ideas and reduce manual work.
                 </p>
                 <div class="chips">
-                    <span class="chip">Economy Tuning</span>
-                    <span class="chip">LiveOps Execution</span>
-                    <span class="chip">Data-Driven Iteration</span>
+                    <span class="chip">Systems and Economy</span>
+                    <span class="chip">LiveOps Delivery</span>
+                    <span class="chip">Experiment and KPI Iteration</span>
                 </div>
                 <div class="hero-cta">
-                    <a href="#projects" class="btn btn-primary">Explore Projects</a>
-                    <a href="about.html" class="btn btn-secondary">About Me</a>
+                    <a href="#projects" class="btn btn-primary">View Case Studies</a>
+                    <a href="about.html" class="btn btn-secondary">About + CV</a>
                 </div>
+                <p class="hero-proof">
+                    Current: Technical Operations Manager, Dice Dreams (SuperPlay). Open to Game Designer (Systems,
+                    LiveOps) roles.
+                </p>
             </div>
         </div>
     </section>
