Update portfolio media and mobile layout

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
             <div class="content-section">
                 <div class="story-section">
                     <div class="story-image">
-                        <img src="images/Alon photo.png" alt="Alon Iter">
+                        <img src="images/Alon photo.JPG" alt="Alon Iter">
                     </div>
                     <div class="story-content">
                         <h2 class="section-heading">Highlights</h2>
