--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                 <!-- Merge Lab -->
                 <div class="project-card">
-                    <div class="project-image">
+                    <div class="project-image tall-media">
                         <img src="assets/merge-lab/demo.gif" alt="Merge Lab gameplay demo">
                         <div class="project-badge">Mobile Prototype</div>
                     </div>
@@ -143,9 +143,10 @@
 
                 <!-- Lucky Tower -->
                 <div class="project-card">
-                    <div class="project-image">
-                        <img src="images/lucky-tower/hero-gameplay.png"
-                            alt="Lucky Tower gameplay showing high-stakes decision moment">
+                    <div class="project-image tall-media">
+                        <video autoplay muted loop playsinline>
+                            <source src="images/lucky-tower/game gif.MP4" type="video/mp4">
+                        </video>
                         <div class="project-badge">LiveOps Design</div>
                     </div>
                     <div class="project-content">
@@ -172,7 +173,9 @@
                 <!-- House Party VR -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="images/house party vr/main photo.png" alt="House Party VR gameplay">
+                        <video autoplay muted loop playsinline>
+                            <source src="images/house party vr/gif1.mp4" type="video/mp4">
+                        </video>
                         <div class="project-badge">Unity Prototype</div>
                     </div>
                     <div class="project-content">
