Update About and ICE Analytics pages

--- a/about.html
+++ b/about.html
@@ -28,10 +28,10 @@
     <!-- About Hero -->
     <section class="about-hero">
         <div class="container">
-            <h1 class="about-title">Hi, I'm Alon Iter. I design and operate mobile F2P systems with fast iteration.</h1>
+            <h1 class="about-title">Hi, I'm Alon Iter. I run technical LiveOps for mobile F2P with precision and speed.</h1>
             <p class="about-subtitle">
-                I work on large-scale LiveOps for Dice Dreams, and I build prototypes and internal tools to validate
-                loops early, reduce manual work, and help teams move faster.
+                I operate large-scale events, promotions, and experiments in Dice Dreams, partnering with Product,
+                Monetization, and QA to ship clean configurations, monitor results, and keep the game running smoothly.
             </p>
         </div>
     </section>
@@ -47,14 +47,12 @@
                     <div class="story-content">
                         <h2 class="section-heading">Highlights</h2>
                         <ul class="about-list">
-                            <li>LiveOps execution for a large casual F2P title, including event setup, promo
-                                configuration, feature rollouts, and economy experiments</li>
-                            <li>Data-informed iteration using segmentation, A/B test support, KPI monitoring, and basic
-                                SQL</li>
-                            <li>Specs and operational documentation that help Product and R&amp;D ship safely and
-                                repeatably</li>
-                            <li>Automation mindset focused on removing repetitive processes and improving iteration
-                                speed</li>
+                            <li>LiveOps execution for a large casual F2P title: event setup, promo configuration,
+                                feature rollouts, and economy experiments</li>
+                            <li>Back-office workflows: pricing configs, segmentation, asset readiness, and launch
+                                checklists</li>
+                            <li>Daily monitoring of live tests with fast fixes and clear escalation paths</li>
+                            <li>Documentation that keeps Product, Monetization, QA, and R&amp;D aligned and reliable</li>
                         </ul>
                     </div>
                 </div>
@@ -63,33 +61,33 @@
             <div class="content-section">
                 <h2 class="section-heading">How I work</h2>
                 <ul class="about-list">
-                    <li>Start with a player behavior hypothesis and a clear goal</li>
-                    <li>Model the economy quickly in spreadsheets to spot risks early</li>
-                    <li>Prototype to validate "game feel" and the decision loop</li>
-                    <li>Write implementation-ready specs, rollout steps, and edge cases so execution is smooth</li>
+                    <li>Translate product goals into concrete back-office configurations and launch plans</li>
+                    <li>Validate setups with QA before release, including edge cases and rollback paths</li>
+                    <li>Monitor live performance, troubleshoot issues, and report actionable insights</li>
+                    <li>Prioritize work across multiple events while keeping release quality high</li>
                 </ul>
             </div>
 
             <div class="content-section">
                 <h2 class="section-heading">What I bring</h2>
                 <div class="skills-category">
-                    <h3 class="skills-category-title">LiveOps &amp; Systems</h3>
+                    <h3 class="skills-category-title">LiveOps &amp; Back Office</h3>
                     <ul class="about-list">
-                        <li>Event configuration, promotions, experiments, and delivery discipline</li>
+                        <li>Campaign setup, pricing configurations, segmentation, and feature toggles</li>
                     </ul>
                 </div>
 
                 <div class="skills-category">
-                    <h3 class="skills-category-title">Data &amp; Decision Making</h3>
+                    <h3 class="skills-category-title">Data &amp; Monitoring</h3>
                     <ul class="about-list">
-                        <li>KPI tracking, segmentation support, A/B test setups, RCA thinking</li>
+                        <li>KPI tracking, test monitoring, and troubleshooting under time pressure</li>
                     </ul>
                 </div>
 
                 <div class="skills-category">
                     <h3 class="skills-category-title">Execution &amp; Collaboration</h3>
                     <ul class="about-list">
-                        <li>Close work with Product, Monetization, Game Ops, and R&amp;D</li>
+                        <li>Fast handoffs and clear comms with Product, Monetization, QA, and R&amp;D</li>
                     </ul>
                 </div>
             </div>
@@ -97,18 +95,19 @@
             <div class="content-section">
                 <h2 class="section-heading">Technical toolkit</h2>
                 <ul class="about-list">
-                    <li><strong>Spreadsheets:</strong> modeling, balancing, planning</li>
+                    <li><strong>Spreadsheets:</strong> planning, validation checklists, and config tracking</li>
                     <li><strong>Data:</strong> basic SQL, dashboards, KPI monitoring</li>
                     <li><strong>Dev:</strong> Python, HTML/CSS/JS, Unity basics, Git</li>
-                    <li><strong>AI:</strong> workflows to accelerate tooling and reduce manual work</li>
+                    <li><strong>Ops:</strong> multi-app workflows, release hygiene, incident triage</li>
                 </ul>
             </div>
 
             <div class="content-section">
                 <h2 class="section-heading">What I'm looking for</h2>
                 <p class="about-text">
-                    A Game Designer role in mobile F2P focused on systems, LiveOps, and feature development, where fast
-                    iteration and measurable improvements matter.
+                    A Technical Operations Specialist role in mobile F2P focused on LiveOps execution, campaign
+                    configuration, and keeping releases stable under fast iteration. I am also open to Product Manager
+                    or Game Designer roles where I can own features, run experiments, and improve player outcomes.
                 </p>
                 <p class="about-text">
                     <a href="Alon%20Iter%20-%20CV.pdf" class="link-primary" download>Download CV (PDF)</a>
@@ -124,13 +123,10 @@
                     <ul class="about-list">
                         <li>Run and support LiveOps events and promotions end-to-end (setup, validation, release
                             coordination)</li>
-                        <li>Partner with Product and R&amp;D to execute feature rollouts safely, including edge-case
-                            coverage and QA notes</li>
-                        <li>Support segmentation and A/B tests by aligning configuration, tracking key KPIs, and
-                            documenting learnings</li>
-                        <li>Build scripts and lightweight tools that reduce manual work and improve reliability of
-                            recurring processes</li>
-                        <li>Maintain clear operational documentation so workflows are repeatable across the team</li>
+                        <li>Configure pricing, segmentation, and event parameters in back-office tools</li>
+                        <li>Partner with Product, Monetization, and QA to ensure live configs work as intended</li>
+                        <li>Monitor tests daily, troubleshoot issues, and report outcomes to stakeholders</li>
+                        <li>Build scripts and lightweight tools that reduce manual work and improve reliability</li>
                     </ul>
                 </div>
             </div>
