--- a/ice-analytics.html
+++ b/ice-analytics.html
@@ -30,101 +30,75 @@
         <div class="container">
             <a href="index.html" class="back-link">← Back to Projects</a>
             <h1 class="project-hero-title">ICE Analytics</h1>
-            <p class="project-hero-subtitle">Unified Product Intelligence Dashboard</p>
-
-            <div class="project-meta">
-                <div class="meta-item">
-                    <span class="meta-label">Role</span>
-                    <span class="meta-value">Product Manager • Data Analyst</span>
-                </div>
-                <div class="meta-item">
-                    <span class="meta-label">Timeline</span>
-                    <span class="meta-value">Ongoing Tooling</span>
-                </div>
-                <div class="meta-item">
-                    <span class="meta-label">Stack</span>
-                    <span class="meta-value">SQL, Python, Visualization</span>
-                </div>
-                <div class="meta-item">
-                    <span class="meta-label">Focus</span>
-                    <span class="meta-value">KPI Tracking, A/B Test Analysis</span>
-                </div>
-            </div>
+            <p class="project-hero-subtitle">Internal KPI dashboard for product and content teams at ICE</p>
+            <p class="project-hero-meta">Internal Tool • Data &amp; Product Analytics • Media Platform</p>
         </div>
     </section>
 
     <!-- Project Content -->
     <section class="project-content">
         <div class="container">
-            <!-- Impact Section -->
-            <div class="content-section highlight-section">
-                <h2 class="content-title">Business Impact</h2>
-                <div class="metrics-grid">
-                    <div class="metric-card">
-                        <div class="metric-value">100%</div>
-                        <div class="metric-label">Data Visibility</div>
-                    </div>
-                    <div class="metric-card">
-                        <div class="metric-value">2x</div>
-                        <div class="metric-label">Faster Decision Cycles</div>
-                    </div>
-                    <div class="metric-card">
-                        <div class="metric-value">Auto</div>
-                        <div class="metric-label">A/B Test Significance</div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- The Problem -->
             <div class="content-section">
-                <h2 class="content-title">Goal</h2>
+                <h2 class="content-title">Overview</h2>
                 <p class="content-text">
-                    Democratize data access so Product Managers can answer "Did metrics improve?" without engineering
-                    delays.
+                    ICE Analytics is an internal analytics dashboard built to help ICE employees quickly understand
+                    product and content performance. The tool centralized key KPIs into a single, self-serve view,
+                    reducing reliance on manual reports and ad-hoc data requests.
                 </p>
             </div>
 
-            <!-- The Solution -->
             <div class="content-section">
-                <h2 class="content-title">What I Built</h2>
-                <div class="design-decision">
-                    <h3 class="decision-title">1. Health Check</h3>
-                    <p class="content-text">
-                        High-level DAU and Revenue pulse for daily standups.
-                    </p>
-                </div>
-                <div class="design-decision">
-                    <h3 class="decision-title">2. Economy Monitor</h3>
-                    <p class="content-text">
-                        Sinks vs. Sources visualization to detect inflation.
-                    </p>
-                </div>
-                <div class="design-decision">
-                    <h3 class="decision-title">3. Feature Funnels</h3>
-                    <p class="content-text">
-                        Conversion tracking for specific user flows.
-                    </p>
-                </div>
+                <h2 class="content-title">Role</h2>
+                <p class="content-text"><strong>Product Owner • Data Analyst</strong></p>
+                <p class="content-text">
+                    I defined KPI requirements with stakeholders, implemented metric logic, and designed the dashboard
+                    structure to support daily decision-making for non-technical users.
+                </p>
             </div>
 
-            <!-- KPI Definitions -->
             <div class="content-section">
-                <h2 class="content-title">Key Metrics Tracked</h2>
+                <h2 class="content-title">The Problem</h2>
+                <p class="content-text">
+                    As ICE grew, teams relied on multiple spreadsheets and manual data pulls to understand performance.
+                    KPI definitions were inconsistent, insights were slow to surface, and non-technical employees
+                    depended heavily on engineers or analysts for answers.
+                </p>
+            </div>
+
+            <div class="content-section">
+                <h2 class="content-title">The Solution</h2>
+                <p class="content-text">
+                    I built an internal dashboard that centralized core KPIs into clear, consistent views. The focus
+                    was on fast readability, shared metric definitions, and making insights accessible to product,
+                    content, and design teams without technical support.
+                </p>
+            </div>
+
+            <div class="content-section">
+                <h2 class="content-title">What the Dashboard Includes</h2>
                 <ul class="content-list">
-                    <li><strong>ARPDAU (Average Revenue Per Daily Active User):</strong> The north star for monetization
-                        health.</li>
-                    <li><strong>LTV (Lifetime Value):</strong> Projected value based on D7/D30 cohorts.</li>
-                    <li><strong>Stickiness (DAU/MAU):</strong> Measuring habit formation.</li>
-                    <li><strong>Conversion Rate:</strong> % of users who make a first purchase.</li>
+                    <li>Daily and weekly KPI health views</li>
+                    <li>Trend analysis for traffic, engagement, and monetization</li>
+                    <li>Funnel views for key product and content flows</li>
+                    <li>Simple visual indicators for performance changes</li>
                 </ul>
             </div>
 
-            <!-- Learnings -->
             <div class="content-section">
-                <h2 class="content-title">Insight & Result</h2>
+                <h2 class="content-title">Impact</h2>
                 <p class="content-text">
-                    V1 failed because it had too many charts. I rebuilt V2 to show only Red/Green health indicators,
-                    doubling adoption by the design team.
+                    The dashboard improved internal visibility into performance and shortened the time needed to answer
+                    common business questions. Teams were able to discuss data using the same definitions, which reduced
+                    confusion and improved alignment across departments.
+                </p>
+            </div>
+
+            <div class="content-section">
+                <h2 class="content-title">What I Learned</h2>
+                <p class="content-text">
+                    Building ICE Analytics taught me how to translate business questions into measurable KPIs, design
+                    dashboards for non-technical users, and iterate based on real employee usage rather than
+                    assumptions.
                 </p>
             </div>
 
